--- a/package.json
+++ b/package.json
@@ -3,25 +3,14 @@
   "description": "My resume as a website.",
   "version": "1.0.0",
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
-    "rollup": "^1.10.1",
-    "rollup-plugin-commonjs": "^9.3.4",
-    "rollup-plugin-css-porter": "^1.0.2",
-    "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-node-resolve": "^4.2.3",
-    "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^4.0.4",
-    "sirv-cli": "^0.4.0",
-    "svelte": "^3.0.0"
+    "parcel-bundler": "^1.12.3",
+    "sass": "^1.20.1"
   },
   "scripts": {
-    "build": "rollup -c",
-    "autobuild": "rollup -c -w",
-    "dev": "run-p start:dev autobuild",
-    "start": "sirv public",
-    "start:dev": "sirv public --dev"
+    "dev": "parcel index.html"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.2",
     "paper-css": "^0.4.1"
   }
 }
