--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "sass": "^1.20.1"
   },
   "scripts": {
-    "dev": "parcel index.html"
+    "dev": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
