--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "1.0.0",
   "devDependencies": {
     "parcel-bundler": "^1.12.3",
+    "prettier": "^1.17.1",
     "sass": "^1.20.1"
   },
   "scripts": {
     "dev": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html",
+    "lint": "prettier --write scss/* index.html"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
