--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "description": "My resume as a website.",
   "version": "1.0.0",
   "devDependencies": {
+    "node-sass": "^4.12.0",
     "parcel-bundler": "^1.12.3",
-    "prettier": "^1.17.1",
-    "sass": "^1.20.1"
+    "prettier": "^1.17.1"
   },
   "scripts": {
     "dev": "parcel index.html",
