--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "my-resume",
   "description": "My resume as a website.",
+  "license": "none",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bencooper222/my-resume.git"
+  },
   "version": "1.0.0",
   "devDependencies": {
-    "electron-pdf": "^4.0.5",
+    "chokidar": "^3.0.2",
     "node-sass": "^4.12.0",
     "parcel-bundler": "^1.12.3",
-    "prettier": "^1.17.1"
+    "prettier": "^1.17.1",
+    "puppeteer": "^1.18.1",
+    "finalhandler": "^1.1.2",
+    "serve-static": "^1.14.1"
   },
   "scripts": {
     "dev": "parcel index.html",
@@ -16,7 +24,6 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.2",
-    "paper-css": "^0.4.1",
-    "puppeteer": "^1.18.1"
+    "paper-css": "^0.4.1"
   }
 }
