--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
   "version": "1.0.0",
   "devDependencies": {
     "chokidar": "^3.0.2",
+    "finalhandler": "^1.1.2",
     "node-sass": "^4.12.0",
     "parcel-bundler": "^1.12.3",
+    "parcel-plugin-purifycss": "^1.0.5",
     "prettier": "^1.17.1",
     "puppeteer": "^1.18.1",
-    "finalhandler": "^1.1.2",
     "serve-static": "^1.14.1"
   },
   "scripts": {
     "dev": "parcel index.html",
     "build": "parcel build index.html",
+    "prod": "node bundle.js",
     "lint": "prettier --write scss/* *.html",
     "pdf": "electron-pdf dist/index.html dist/pdf.pdf"
   },
