--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "finalhandler": "^1.1.2",
     "node-sass": "^4.12.0",
     "parcel-bundler": "^1.12.3",
-    "parcel-plugin-purifycss": "^1.0.5",
     "prettier": "^1.17.1",
     "puppeteer": "^1.18.1",
+    "purify-css": "^1.2.5",
     "serve-static": "^1.14.1"
   },
   "scripts": {
