--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "my-resume",
   "description": "My resume as a website.",
-  "license": "none",
+  "license": "UNLICENSED",
   "repository": {
     "type": "git",
     "url": "https://github.com/bencooper222/my-resume.git"
   },
-  "version": "1.0.0",
+  "version": "1.1.0",
   "devDependencies": {
     "@types/puppeteer": "^1.19.0",
     "chokidar": "^3.0.2",
