--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dev": "parcel index.html",
     "build": "parcel build index.html",
     "prod": "node bundle.js",
-    "lint": "prettier --write scss/* *.html",
+    "lint": "prettier --write scss/* *.html *.md",
     "pdf": "electron-pdf dist/index.html dist/pdf.pdf"
   },
   "dependencies": {
