--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "@types/puppeteer": "^1.20.2",
     "chokidar": "^3.2.2",
     "finalhandler": "^1.1.2",
-    "node-sass": "^4.12.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.18.2",
     "puppeteer": "^1.20.0",
     "purify-css": "^1.2.5",
+    "sass": "^1.24.4",
     "serve-static": "^1.14.1"
   },
   "scripts": {
