--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1",
     "puppeteer": "^1.20.0",
-    "purify-css": "^1.2.5",
     "sass": "^1.26.3",
     "serve-static": "^1.14.1"
   },
@@ -27,6 +26,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "instant.page": "^2.0.1",
-    "paper-css": "^0.4.1"
+    "paper-css": "^0.4.1",
+    "parcel-plugin-purifycss": "^1.0.5"
   }
 }
