--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chokidar": "^3.4.0",
     "finalhandler": "^1.1.2",
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-static-files-copy": "^2.4.3",
     "prettier": "^1.19.1",
     "puppeteer": "^1.20.0",
     "purify-css": "^1.2.5",
