--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "finalhandler": "^1.1.2",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-static-files-copy": "^2.4.3",
+    "posthtml": "^0.13.1",
+    "posthtml-insert-at": "^0.2.7",
     "prettier": "^1.19.1",
     "puppeteer": "^1.20.0",
     "purify-css": "^1.2.5",
@@ -22,7 +24,7 @@
   "scripts": {
     "dev": "parcel index.html",
     "build": "parcel build index.html",
-    "prod": "node bundle.js",
+    "prod": "node bundler/index.js",
     "lint": "prettier --write scss/* *.html *.md"
   },
   "dependencies": {
