--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
   "version": "1.1.0",
   "devDependencies": {
     "@types/puppeteer": "^1.20.6",
-    "chokidar": "^3.4.0",
+    "chokidar": "^3.4.1",
     "finalhandler": "^1.1.2",
     "parcel-bundler": "^1.12.4",
-    "parcel-plugin-static-files-copy": "^2.4.3",
+    "posthtml": "^0.13.1",
+    "posthtml-insert-at": "^0.2.7",
     "prettier": "^1.19.1",
     "puppeteer": "^1.20.0",
     "purify-css": "^1.2.5",
-    "sass": "^1.26.9",
+    "sass": "^1.26.10",
     "serve-static": "^1.14.1"
   },
   "scripts": {
     "dev": "parcel index.html",
     "build": "parcel build index.html",
-    "prod": "node bundle.js",
-    "lint": "prettier --write scss/* *.html *.md"
+    "prod": "node bundler/index.js",
+    "lint": "prettier --write scss/* *.html *.md bundler/*.js styles/*.{scss,css}"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.1",
