--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "@fortawesome/fontawesome-free": "^5.13.1",
     "instant.page": "^2.0.1",
     "paper-css": "^0.4.1"
+  },
+  "volta": {
+    "node": "14.16.0"
   }
 }
